rust/message-backup/tests/res/test-cases/invalid/sticker-pack-id.jsonproto
[
  {
    "version": "1",
    "backupTimeMs": "1705692409729",
    "mediaRootBackupKey": "q6urq6urq6urq6urq6urq6urq6urq6urq6urq6urq6s=",
  },
  {
    "recipient": {
      "id": "1",
      "self": {}
    }
  },
  {
    "chat": {
      "id": "1",
      "recipientId": "1"
    }
  },
  {
    "chatItem": {
      "chatId": "1",
      "authorId": "1",
      "directionless": {},
      "dateSent": 12345,
      "stickerMessage": {
        "sticker": {
          "packId": "YXNkZgo=",
          "stickerId": 5566
        }
      }
    }
  }
]